Split out calls into separate files

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,16 @@
 {port_specs, [
     {"priv/alcove", [
         "c_src/alcove.c",
+
         "c_src/alcove_cmd.c",
+        "c_src/alcove_cred.c",
+        "c_src/alcove_dir.c",
+        "c_src/alcove_exec.c",
+        "c_src/alcove_fork.c",
+        "c_src/alcove_limit.c",
+        "c_src/alcove_proc.c",
+        "c_src/alcove_utsname.c",
+
         "c_src/alcove_term.c",
         "c_src/erl_posix_str.c"
     ]}
@@ -15,6 +24,7 @@
 {pre_hooks, [
     {compile, "bin/alcove_version.escript c_src/alcove_version.h"},
     {compile, "bin/alcove_cmd.sh c_src/alcove_cmd.proto > c_src/alcove_cmd.h"},
+    {compile, "bin/alcove_call.sh c_src/alcove_cmd.proto > c_src/alcove_call.h"},
     {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_cmd.proto"}
 ]}.
 
