Rename cmd -> call

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ deps/
 .eunit/
 .depsolver_plt
 c_src/alcove_call.h
-c_src/alcove_cmd.h
+c_src/alcove_calls.h
 c_src/alcove_version.h
 src/alcove.erl
