--- a/rebar.config
+++ b/rebar.config
@@ -6,8 +6,8 @@
 {port_specs, [
     {"priv/alcove", [
         "c_src/alcove.c",
+        "c_src/alcove_call.c",
 
-        "c_src/alcove_cmd.c",
         "c_src/alcove_cred.c",
         "c_src/alcove_dir.c",
         "c_src/alcove_exec.c",
@@ -23,13 +23,14 @@
 
 {pre_hooks, [
     {compile, "bin/alcove_version.escript c_src/alcove_version.h"},
-    {compile, "bin/alcove_cmd.sh c_src/alcove_cmd.proto > c_src/alcove_cmd.h"},
-    {compile, "bin/alcove_call.sh c_src/alcove_cmd.proto > c_src/alcove_call.h"},
-    {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_cmd.proto"}
+    {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
+    {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
+    {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_call.proto"}
 ]}.
 
 {clean_files, [
-    "c_src/alcove_cmd.h",
+    "c_src/alcove_call.h",
+    "c_src/alcove_calls.h",
     "c_src/alcove_version.h",
     "src/alcove.erl"
 ]}.
