Add support for bind mounts using mount(2)
Assuming a the directory "/tmp/mnt" exists:

    1> Port = alcove_drv:start([{exec, "sudo"}]).

    % Fork a process with a new mount namespace
    2> {ok, Child} = alcove:clone(Port, alcove:clone_define(Port, newns)).

    % Read-only bind mount of /bin on /tmp/mnt
    3> alcove:mount(Port, [Child], "/bin", "/tmp/mnt", "", 4096 bxor 1, "").

    % Run "/bin/ls -al /tmp/mnt" in the mount namespace
    4> alcove:execvp(Port, [Child], "/bin/ls", ["/bin/ls", "-al", "/tmp/mnt]).

--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
         "c_src/alcove_exec.c",
         "c_src/alcove_fork.c",
         "c_src/alcove_limit.c",
+        "c_src/alcove_mount.c",
         "c_src/alcove_proc.c",
         "c_src/alcove_utsname.c",
 
