Add functions for manipulating the environment
The process environment can be set up in a few ways:

* using the {env, [{Key, Val}]} option in alcove_drv:start/1

  Global: will effect all future spawned processes.

* at exec, using execve/5

  Per process: will affect the child process

* using getenv(3), setenv(3) and unsetenv(3)

--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,7 @@
 
         "c_src/alcove_cred.c",
         "c_src/alcove_dir.c",
+        "c_src/alcove_env.c",
         "c_src/alcove_exec.c",
         "c_src/alcove_fork.c",
         "c_src/alcove_limit.c",
