cgroups: add open(2), write(2), read(2), close(2)
Support syscalls required for manipulating cgroups. See cpuset(7).

--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,7 @@
         "c_src/alcove_dir.c",
         "c_src/alcove_env.c",
         "c_src/alcove_exec.c",
+        "c_src/alcove_file.c",
         "c_src/alcove_fork.c",
         "c_src/alcove_limit.c",
         "c_src/alcove_mount.c",
