Support allocating C structs containing pointers
Provide an interace for creating buffers with embedded pointers for
seccomp mode. Seccomp mode uses bpf programs which look like:

    struct sock_fprog {
        unsigned short len;
        struct sock_filter *filter;
    };

The caller can provide generate the structure using a list:

    [
        % 8 instructions in filter
        <<8:2/native-unsigned-integer-unit:8>>,
        % Pad
        <<0:16>>,
        % Generate a binary containing the BPF instructions
        {ptr, bpf_filter()}
    ]

Rough, buggy code to get started testing seccomp mode. In particular,
the contents of the allocated buffers is write only currently. Some of
the prctl() calls are probably in/out.

--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,7 @@
         "c_src/alcove.c",
         "c_src/alcove_call.c",
 
+        "c_src/alcove_alloc.c",
         "c_src/alcove_cred.c",
         "c_src/alcove_dir.c",
         "c_src/alcove_env.c",
