--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
         "c_src/alcove_mount.c",
         "c_src/alcove_proc.c",
         "c_src/alcove_signal.c",
+        "c_src/alcove_syscall.c",
         "c_src/alcove_utsname.c",
 
         "c_src/alcove_term.c",
