cleanup: break up the term codec files

--- a/rebar.config
+++ b/rebar.config
@@ -22,7 +22,8 @@
         "c_src/alcove_syscall.c",
         "c_src/alcove_utsname.c",
 
-        "c_src/alcove_term.c",
+        "c_src/alcove_term_decode.c",
+        "c_src/alcove_term_encode.c",
         "c_src/erl_posix_str.c"
     ]}
 ]}.
