--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {port_env, [
         {"EXE_LDFLAGS", "$ALCOVE_LDFLAGS $EXE_LDFLAGS"},
+        {"solaris", "EXE_LDFLAGS", "$ALCOVE_LDFLAGS -lsocket -lnsl $EXE_LDFLAGS"},
         {"EXE_CFLAGS", "$EXE_CFLAGS $ALCOVE_CFLAGS"}
         ]}.
 
