--- a/rebar.config
+++ b/rebar.config
@@ -33,6 +33,7 @@
     {compile, "bin/alcove_version.escript c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
     {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
+    {compile, "bin/alcove_proto.escript src/alcove_proto.erl c_src/alcove_call.proto"},
     {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_call.proto"}
 ]}.
 
