Fix compilation errors on Solaris
Use POSIX 200112L/C99 mode on Solaris to suppress compilation warnings.

"-D__EXTENSIONS__=1" is required for NSIG (max number of signals). This
also pulls in an ERR macro which necessitates renaming the goto label
from ERR -> ERROR.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {port_env, [
         {"EXE_LDFLAGS", "$ALCOVE_LDFLAGS $EXE_LDFLAGS"},
         {"solaris", "EXE_LDFLAGS", "$ALCOVE_LDFLAGS -lsocket -lnsl $EXE_LDFLAGS"},
+        {"solaris", "CFLAGS", "-std=c99 -D_POSIX_C_SOURCE=200112L -D__EXTENSIONS__=1"},
         {"EXE_CFLAGS", "$EXE_CFLAGS $ALCOVE_CFLAGS"}
         ]}.
 
