--- a/rebar.config
+++ b/rebar.config
@@ -1,49 +1,20 @@
-{port_env, [
-        {"EXE_LDFLAGS", "$ALCOVE_LDFLAGS $EXE_LDFLAGS"},
-        {"solaris", "EXE_LDFLAGS", "$ALCOVE_LDFLAGS -lsocket -lnsl $EXE_LDFLAGS"},
-        {"solaris", "CFLAGS", "-std=c99 -D_POSIX_C_SOURCE=200112L -D__EXTENSIONS__=1"},
-        {"EXE_CFLAGS", "$EXE_CFLAGS $ALCOVE_CFLAGS"}
-        ]}.
-
-{port_specs, [
-    {"priv/alcove", [
-        "c_src/alcove.c",
-        "c_src/alcove_call.c",
-
-        "c_src/alcove_alloc.c",
-        "c_src/alcove_cred.c",
-        "c_src/alcove_dir.c",
-        "c_src/alcove_env.c",
-        "c_src/alcove_exec.c",
-        "c_src/alcove_file.c",
-        "c_src/alcove_fork.c",
-        "c_src/alcove_limit.c",
-        "c_src/alcove_mount.c",
-        "c_src/alcove_proc.c",
-        "c_src/alcove_signal.c",
-        "c_src/alcove_syscall.c",
-        "c_src/alcove_utsname.c",
-
-        "c_src/alcove_term_decode.c",
-        "c_src/alcove_term_encode.c",
-        "c_src/erl_posix_str.c"
-    ]}
-]}.
-
 {pre_hooks, [
     {compile, "bin/alcove_version.escript c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
     {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
     {compile, "bin/alcove_proto.escript src/alcove_proto.erl c_src/alcove_call.proto"},
-    {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_call.proto"}
+    {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_call.proto"},
+    {"(linux|darwin|solaris)", compile, "make -C c_src"},
+    {"(freebsd|openbsd|netbsd)", compile, "gmake -C c_src"}
 ]}.
 
-{clean_files, [
-    "c_src/alcove_call.h",
-    "c_src/alcove_calls.h",
-    "c_src/alcove_version.h",
-    "src/alcove.erl"
-]}.
+{post_hooks, [
+    {"(linux|darwin|solaris)", clean, "make -C c_src clean"},
+    {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"}
+    ]}.
 
 {xref_checks, [undefined_function_calls]}.
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
+
+% rebar2 compatibility: disable port compiler
+{port_specs, [{"", []}]}.
