--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-ebin/
-priv/
-deps/
-*.[oa]
 *.beam
-*.swp
-.eunit/
-.depsolver_plt
+_build
 c_src/alcove_call.h
 c_src/alcove_calls.h
 c_src/alcove_version.h
+deps/
+.depsolver_plt
+ebin/
+.erlang
+.eunit/
+*.[oa]
+priv/
+.rebar/
+.rebar3/
 src/alcove.erl
 src/alcove_proto.erl
+*.swp
