Add and fix additional dialyzer flags

--- a/rebar.config
+++ b/rebar.config
@@ -15,5 +15,12 @@
 
 {xref_checks, [undefined_function_calls]}.
 
+{dialyzer, [
+    {warnings, [
+        unmatched_returns,
+        error_handling,
+        race_conditions
+    ]}]}.
+
 % rebar2 compatibility: disable port compiler
 {port_specs, [{"", []}]}.
