Add dialyzer flags, fix warnings

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
     {warnings, [
         unmatched_returns,
         error_handling,
-        race_conditions
+        race_conditions,
+        underspecs
     ]}]}.
 
 % rebar2 compatibility: disable port compiler
