--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
     {compile, "bin/alcove_version.escript > c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
     {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
-    {compile, "bin/alcove_proto.escript src/alcove_proto.erl c_src/alcove_call.proto"},
+    {compile, "bin/alcove_proto.escript > src/alcove_proto.erl"},
     {compile, "bin/alcove.escript src/alcove.erl c_src/alcove_call.proto"},
     {"(linux|darwin|solaris)", compile, "make -C c_src"},
     {"(freebsd|openbsd|netbsd)", compile, "gmake -C c_src"}
