rebar: compile with debug info

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{erl_opts, [debug_info]}.
 {pre_hooks, [
     {compile, "bin/alcove_version.escript > c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
