--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -20,15 +20,15 @@ ifeq ($(UNAME_SYS), Darwin)
 #	LDFLAGS ?= -arch x86_64 -flat_namespace -undefined suppress
 else ifeq ($(UNAME_SYS), FreeBSD)
 	CC ?= cc
-	LDFLAGS ?= -Wno-missing-braces -Wl,-Bsymbolic-functions -Wl,-z,relro
+	LDFLAGS ?= -Wno-missing-braces -Wl,-Bsymbolic-functions -Wl,-z,relro,-z,now
 	CFLAGS ?= -D_FORTIFY_SOURCE=2 -O2 -fstack-protector-strong -Wformat -Werror=format-security -fno-strict-aliasing
 else ifeq ($(UNAME_SYS), OpenBSD)
 	CC ?= cc
-	LDFLAGS ?= -Wl,-z,relro
+	LDFLAGS ?= -Wl,-z,relro,-z,now
 	CFLAGS ?= -D_FORTIFY_SOURCE=2 -O2 -fstack-protector-strong -Wformat -Werror=format-security -fno-strict-aliasing
 else ifeq ($(UNAME_SYS), Linux)
 	CC ?= cc
-	LDFLAGS ?= -Wl,-Bsymbolic-functions -Wl,-z,relro
+	LDFLAGS ?= -Wl,-Bsymbolic-functions -Wl,-z,relro,-z,now
 	CFLAGS ?= -D_FORTIFY_SOURCE=2 -O2 -fstack-protector-strong -Wformat -Werror=format-security -fno-strict-aliasing
 else ifeq ($(UNAME_SYS), SunOS)
 	LDFLAGS += -lsocket -lnsl
