filter/1: filter calls
Add the ability to restrict calls available to an alcove control
process:

* filtering multiple calls requires multiple port operations

* if filter/1 is filtered, no further calls to filter will be allowed

* filtered functions return 'undef'

* filters are kept across forks, inherited from the parent by the child

A control process with all calls disabled will still monitor and proxy
any subprocesses:

~~~
{ok, Drv} = alcove_drv:start(),
{ok, Ctrl} = alcove:fork(Drv, []),
{ok, Task0} = alcove:fork(Drv, [Ctrl]),
{ok, Task1} = alcove:fork(Drv, [Ctrl]),

% allow close for eof
Filter = lists:filter(
  fun(Call) when Call == filter; Call = close -> false; (_) -> true end,
  alcove_proto:calls()),

_ = [ alcove:filter(Drv, [Ctrl], alcove_proto:call(C)) || C <- Filter ],

ok = alcove:filter(Drv, [Ctrl], alcove_proto:call(filter)).
~~~

--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
     {compile, "bin/alcove_version.escript > c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
     {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
+    {compile, "bin/alcove_nr.sh c_src/alcove_call.proto > c_src/alcove_nr.h"},
     {compile, "bin/alcove_proto.escript alcove_proto c_src/alcove_call.proto > src/alcove_proto.erl"},
     {compile, "bin/alcove.escript alcove c_src/alcove_call.proto > src/alcove.erl"},
     {"(linux|darwin|solaris)", compile, "make -C c_src"},
