Makefile: remove dep on erl_interface
OTP 23 removed erl_interface. alcove uses ei. erl_interface is not
used. The ei headers are still kept in the erl_interface directory.

--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -54,7 +54,7 @@ ALCOVE_CFLAGS ?= -g -Wall -fwrapv -pedantic -Wshadow -Wpointer-arith \
 								 -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes
 CFLAGS += $(ALCOVE_CFLAGS) $(ALCOVE_DEFINE) -I $(C_SRC_DIR) -I $(ERTS_INCLUDE_DIR) -I $(ERL_INTERFACE_INCLUDE_DIR)
 
-LDLIBS += -L $(ERL_INTERFACE_LIB_DIR) $(ALCOVE_LDFLAGS) -lerl_interface -lei
+LDLIBS += -L $(ERL_INTERFACE_LIB_DIR) $(ALCOVE_LDFLAGS) -lei
 
 # Verbosity.
 
