erlfmt: re-format
```
erlfmt -w
```

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,12 @@
 {erl_opts, [debug_info]}.
+
 {pre_hooks, [
     {compile, "bin/alcove_version.escript > c_src/alcove_version.h"},
     {compile, "bin/alcove_calls.sh c_src/alcove_call.proto > c_src/alcove_calls.h"},
     {compile, "bin/alcove_call.sh c_src/alcove_call.proto > c_src/alcove_call.h"},
     {compile, "bin/alcove_nr.sh c_src/alcove_call.proto > c_src/alcove_nr.h"},
-    {compile, "bin/alcove_proto.escript alcove_proto c_src/alcove_call.proto > src/alcove_proto.erl"},
+    {compile,
+        "bin/alcove_proto.escript alcove_proto c_src/alcove_call.proto > src/alcove_proto.erl"},
     {compile, "bin/alcove.escript alcove c_src/alcove_call.proto > src/alcove.erl"},
     {"(linux|darwin|solaris)", compile, "make -C c_src"},
     {"(freebsd|openbsd|netbsd)", compile, "gmake -C c_src"}
@@ -13,7 +15,7 @@
 {post_hooks, [
     {"(linux|darwin|solaris)", clean, "make -C c_src clean"},
     {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"}
-    ]}.
+]}.
 
 {xref_checks, [undefined_function_calls]}.
 
@@ -23,7 +25,8 @@
         error_handling,
         race_conditions,
         underspecs
-    ]}]}.
+    ]}
+]}.
 
 % rebar2 compatibility: disable port compiler
 {port_specs, [{"", []}]}.
