--- a/rebar.config
+++ b/rebar.config
@@ -21,5 +21,11 @@
     ]}
 ]}.
 
+{edoc_opts, [
+    {doclet, edoc_doclet_chunks},
+    {layout, edoc_layout_chunks},
+    {dir, "_build/default/lib/alcove/doc"}
+]}.
+
 % rebar2 compatibility: disable port compiler
 {port_specs, [{"", []}]}.
