--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
 
 {post_hooks, [
     {"(linux|darwin|solaris)", clean, "make -C c_src clean"},
-    {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"}
+    {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"},
+    {edoc, "ex_doc --config .ex_doc.config --source-url \"https://github.com/msantos/alcove\" --source-ref \"master\" \"alcove\" `erl -noshell -s init stop -eval '{ok, [{_,_,X}]} = file:consult(\"src/alcove.app.src\"), io:format(\"~s\", [proplists:get_value(vsn, X, \"0.0.0\")]).'` _build/default/lib/alcove/ebin"}
 ]}.
 
 {xref_checks, [undefined_function_calls]}.
