docs: use rebar3 ex_doc

--- a/rebar.config
+++ b/rebar.config
@@ -7,8 +7,7 @@
 
 {post_hooks, [
     {"(linux|darwin|solaris)", clean, "make -C c_src clean"},
-    {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"},
-    {edoc, "ex_doc --config .ex_doc.config --source-url \"https://github.com/msantos/alcove\" --source-ref \"master\" \"alcove\" `erl -noshell -s init stop -eval '{ok, [{_,_,X}]} = file:consult(\"src/alcove.app.src\"), io:format(\"~s\", [proplists:get_value(vsn, X, \"0.0.0\")]).'` _build/default/lib/alcove/ebin"}
+    {"(freebsd|openbsd|netbsd)", clean, "gmake -C c_src clean"}
 ]}.
 
 {xref_checks, [undefined_function_calls]}.
@@ -22,10 +21,13 @@
     ]}
 ]}.
 
-{edoc_opts, [
-    {doclet, edoc_doclet_chunks},
-    {layout, edoc_layout_chunks},
-    {dir, "_build/default/lib/alcove/doc"}
+{ex_doc, [
+    {extras, [
+        {"README.md", #{title => "Overview"}},
+        "LICENSE"
+    ]},
+    {main, "README.md"},
+    {source_url, "https://github.com/msantos/alcove"}
 ]}.
 
 % rebar2 compatibility: disable port compiler
