rebar3: hex: suppress warning

--- a/rebar.config
+++ b/rebar.config
@@ -30,5 +30,7 @@
     {source_url, "https://github.com/msantos/alcove"}
 ]}.
 
+{hex, [{doc, ex_doc}]}.
+
 % rebar2 compatibility: disable port compiler
 {port_specs, [{"", []}]}.
